--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,19 @@ jobs:
     permissions:
       contents: write
     steps:
+      # - uses: lowlighter/metrics@latest
+      #   with:
+      #     token: ${{ secrets.METRICS_TOKEN }}
+      
       - uses: lowlighter/metrics@latest
         with:
+          template: repository
+          filename: metrics.repository.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          user: lowlighter
+          repo: metrics
+          plugin_lines: yes
+          plugin_followup: yes
+          plugin_projects: yes
+          plugin_projects_repositories: lowlighter/metrics/projects/1
+
